--- a/bancabd/.classpath
+++ b/bancabd/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/abravo/Google Drive/Trabajo/Cursos/Java/JAVAEE_DesarrolladorProfesional/MaterialCurso/BBDD_Curso/DriverMysql/mysql-connector-java-5.1.45/mysql-connector-java-5.1.45-bin.jar"/>
+	<classpathentry kind="lib" path="D:/manana/AndresBravo/materialcurso/sw/diverMysql/mysql-connector-java-5.1.40.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
